// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFieldPassword is rendered 1`] = `
<div
  class="euiFormControlLayout"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  >
    <eui-validatable-control>
      <input
        aria-label="aria-label"
        class="euiFieldPassword testClass1 testClass2"
        data-test-subj="test subject string"
        id="1"
        name="elastic"
        placeholder="Placeholder"
        type="password"
        value="1"
      />
    </eui-validatable-control>
    <div
      class="euiFormControlLayoutIcons"
    >
      <span
        class="euiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="euiFormControlLayoutCustomIcon__icon"
          data-euiicon-type="lock"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`EuiFieldPassword props compressed is rendered 1`] = `
<div
  class="euiFormControlLayout euiFormControlLayout--compressed"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  >
    <eui-validatable-control>
      <input
        class="euiFieldPassword euiFieldPassword--compressed"
        type="password"
      />
    </eui-validatable-control>
    <div
      class="euiFormControlLayoutIcons"
    >
      <span
        class="euiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="euiFormControlLayoutCustomIcon__icon"
          data-euiicon-type="lock"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`EuiFieldPassword props dual dual type also renders append 1`] = `
<div
  class="euiFormControlLayout euiFormControlLayout--group"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  >
    <eui-validatable-control>
      <input
        class="euiFieldPassword euiFieldPassword--inGroup euiFieldPassword--withToggle"
        type="password"
      />
    </eui-validatable-control>
    <div
      class="euiFormControlLayoutIcons"
    >
      <span
        class="euiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="euiFormControlLayoutCustomIcon__icon"
          data-euiicon-type="lock"
        />
      </span>
    </div>
  </div>
  <label
    class="euiFormLabel euiFormControlLayout__append"
  >
    String
  </label>
  <span
    class="euiFormControlLayout__append"
  >
    Span
  </span>
  <button
    aria-label="Show password as plain text. Note: this will visually expose your password on the screen."
    class="euiButtonIcon euiButtonIcon--primary euiButtonIcon--empty euiButtonIcon--xSmall euiFormControlLayout__append"
    title="Show password as plain text. Note: this will visually expose your password on the screen."
    type="button"
  >
    <span
      aria-hidden="true"
      class="euiButtonIcon__icon"
      color="inherit"
      data-euiicon-type="eye"
    />
  </button>
</div>
`;

exports[`EuiFieldPassword props dual dualToggleProps is rendered 1`] = `
<div
  class="euiFormControlLayout euiFormControlLayout--group"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  >
    <eui-validatable-control>
      <input
        class="euiFieldPassword euiFieldPassword--inGroup euiFieldPassword--withToggle"
        type="password"
      />
    </eui-validatable-control>
    <div
      class="euiFormControlLayoutIcons"
    >
      <span
        class="euiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="euiFormControlLayoutCustomIcon__icon"
          data-euiicon-type="lock"
        />
      </span>
    </div>
  </div>
  <button
    aria-label="aria-label"
    class="euiButtonIcon euiButtonIcon--primary euiButtonIcon--empty euiButtonIcon--xSmall euiFormControlLayout__append testClass1 testClass2"
    data-test-subj="test subject string"
    title="Show password as plain text. Note: this will visually expose your password on the screen."
    type="button"
  >
    <span
      aria-hidden="true"
      class="euiButtonIcon__icon"
      color="inherit"
      data-euiicon-type="eye"
    />
  </button>
</div>
`;

exports[`EuiFieldPassword props fullWidth is rendered 1`] = `
<div
  class="euiFormControlLayout euiFormControlLayout--fullWidth"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  >
    <eui-validatable-control>
      <input
        class="euiFieldPassword euiFieldPassword--fullWidth"
        type="password"
      />
    </eui-validatable-control>
    <div
      class="euiFormControlLayoutIcons"
    >
      <span
        class="euiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="euiFormControlLayoutCustomIcon__icon"
          data-euiicon-type="lock"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`EuiFieldPassword props isInvalid is rendered 1`] = `
<div
  class="euiFormControlLayout"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  >
    <eui-validatable-control
      isinvalid="true"
    >
      <input
        class="euiFieldPassword"
        type="password"
      />
    </eui-validatable-control>
    <div
      class="euiFormControlLayoutIcons"
    >
      <span
        class="euiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="euiFormControlLayoutCustomIcon__icon"
          data-euiicon-type="lock"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`EuiFieldPassword props isLoading is rendered 1`] = `
<div
  class="euiFormControlLayout"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  >
    <eui-validatable-control>
      <input
        class="euiFieldPassword euiFieldPassword-isLoading"
        type="password"
      />
    </eui-validatable-control>
    <div
      class="euiFormControlLayoutIcons"
    >
      <span
        class="euiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="euiFormControlLayoutCustomIcon__icon"
          data-euiicon-type="lock"
        />
      </span>
    </div>
    <div
      class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
    >
      <span
        class="euiLoadingSpinner euiLoadingSpinner--medium"
      />
    </div>
  </div>
</div>
`;

exports[`EuiFieldPassword props prepend and append is rendered 1`] = `
<div
  class="euiFormControlLayout euiFormControlLayout--group"
>
  <label
    class="euiFormLabel euiFormControlLayout__prepend"
  >
    String
  </label>
  <div
    class="euiFormControlLayout__childrenWrapper"
  >
    <eui-validatable-control>
      <input
        class="euiFieldPassword euiFieldPassword--inGroup"
        type="password"
      />
    </eui-validatable-control>
    <div
      class="euiFormControlLayoutIcons"
    >
      <span
        class="euiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="euiFormControlLayoutCustomIcon__icon"
          data-euiicon-type="lock"
        />
      </span>
    </div>
  </div>
  <label
    class="euiFormLabel euiFormControlLayout__append"
  >
    String
  </label>
</div>
`;

exports[`EuiFieldPassword props type dual is rendered 1`] = `
<div
  class="euiFormControlLayout euiFormControlLayout--group"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  >
    <eui-validatable-control>
      <input
        class="euiFieldPassword euiFieldPassword--inGroup euiFieldPassword--withToggle"
        type="password"
      />
    </eui-validatable-control>
    <div
      class="euiFormControlLayoutIcons"
    >
      <span
        class="euiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="euiFormControlLayoutCustomIcon__icon"
          data-euiicon-type="lock"
        />
      </span>
    </div>
  </div>
  <button
    aria-label="Show password as plain text. Note: this will visually expose your password on the screen."
    class="euiButtonIcon euiButtonIcon--primary euiButtonIcon--empty euiButtonIcon--xSmall euiFormControlLayout__append"
    title="Show password as plain text. Note: this will visually expose your password on the screen."
    type="button"
  >
    <span
      aria-hidden="true"
      class="euiButtonIcon__icon"
      color="inherit"
      data-euiicon-type="eye"
    />
  </button>
</div>
`;

exports[`EuiFieldPassword props type password is rendered 1`] = `
<div
  class="euiFormControlLayout"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  >
    <eui-validatable-control>
      <input
        class="euiFieldPassword"
        type="password"
      />
    </eui-validatable-control>
    <div
      class="euiFormControlLayoutIcons"
    >
      <span
        class="euiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="euiFormControlLayoutCustomIcon__icon"
          data-euiicon-type="lock"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`EuiFieldPassword props type text is rendered 1`] = `
<div
  class="euiFormControlLayout"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  >
    <eui-validatable-control>
      <input
        class="euiFieldPassword"
        type="text"
      />
    </eui-validatable-control>
    <div
      class="euiFormControlLayoutIcons"
    >
      <span
        class="euiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="euiFormControlLayoutCustomIcon__icon"
          data-euiicon-type="lock"
        />
      </span>
    </div>
  </div>
</div>
`;
